--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,7 @@ block content
       if val.completed > 0
         span Completed
       else
-        pan Not Completed
+        span Not Completed
       form(method='POST' action='/delete')
         input(type='hidden', name='id', value=val.id)
         button(type='submit') Delete
